[gd_scene load_steps=54 format=3 uid="uid://c83ndiejbf0sf"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_5b6ds"]
[ext_resource type="Resource" uid="uid://dq54jiyd6vvwv" path="res://Resources/Player Movement Data/DefaultMovementData.tres" id="2_sbvpg"]
[ext_resource type="Resource" uid="uid://bn6y6bq3ft7bl" path="res://Resources/Player/stats_player_default.tres" id="3_dm6u0"]
[ext_resource type="Texture2D" uid="uid://dw6ubvgocjxny" path="res://Art/Shadow.png" id="3_q1orw"]
[ext_resource type="Texture2D" uid="uid://dvs3af47yusy2" path="res://Art/Characters/BlackNinja/blackninja_SpriteSheet.png" id="4_hvum2"]
[ext_resource type="Shader" uid="uid://dt0cqkpqv4t0s" path="res://VFX/Shaders/hit_flash.res" id="5_mmgmg"]
[ext_resource type="PackedScene" uid="uid://b7jr5q03ovc60" path="res://Scenes/Components/hurtbox.tscn" id="6_mmy1x"]
[ext_resource type="AudioStream" uid="uid://bu2y4bs46wrg0" path="res://Music/SFX/grass_step.wav" id="6_n0eae"]
[ext_resource type="Script" path="res://Scripts/Inventory/inventory.gd" id="7_doocm"]
[ext_resource type="PackedScene" uid="uid://d4a6d4wu5bd6v" path="res://Scenes/FX/fx_manager.tscn" id="8_4nua5"]
[ext_resource type="AudioStream" uid="uid://bxarnpdvcp2ga" path="res://Music/SFX/Hit.wav" id="8_pplm0"]
[ext_resource type="Script" path="res://Scripts/Components/hurtbox.gd" id="8_qg850"]
[ext_resource type="Script" path="res://Scripts/Components/StatsComponent/health_component.gd" id="9_2vrhx"]
[ext_resource type="Script" path="res://Scripts/Components/StatsComponent/level_component.gd" id="10_2p8m5"]
[ext_resource type="Script" path="res://Scripts/Components/StatsComponent/stats_component.gd" id="10_37dvf"]
[ext_resource type="LabelSettings" uid="uid://fqpaivrurl6s" path="res://Resources/Menu/label_settings.tres" id="15_t8qhs"]
[ext_resource type="Texture2D" uid="uid://gabo6yajmp60" path="res://Art/Weapons/aoe.png" id="17_fya5j"]
[ext_resource type="Script" path="res://Scripts/Components/pickup_range.gd" id="17_hd6ll"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mhluu"]
shader = ExtResource("5_mmgmg")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5rws2"]
radius = 2.0
height = 10.0

[sub_resource type="Animation" id="Animation_ftg8m"]
resource_name = "Player_Dead"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_syiax"]
resource_name = "Player_IdleDown"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ehbcb"]
resource_name = "Player_IdleLeft"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_81qhr"]
resource_name = "Player_IdleRight"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_86o8p"]
resource_name = "Player_IdleUp"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_0bki2"]
resource_name = "Player_MoveDown"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 12]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footstep_audio"
}, {
"args": [],
"method": &"play_footstep_audio"
}]
}

[sub_resource type="Animation" id="Animation_2334g"]
resource_name = "Player_MoveLeft"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 6, 10, 14]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footstep_audio"
}, {
"args": [],
"method": &"play_footstep_audio"
}]
}

[sub_resource type="Animation" id="Animation_s3r6y"]
resource_name = "Player_MoveRight"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 7, 11, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footstep_audio"
}, {
"args": [],
"method": &"play_footstep_audio"
}]
}

[sub_resource type="Animation" id="Animation_7jrqr"]
resource_name = "Player_MoveUp"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 5, 9, 13]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footstep_audio"
}, {
"args": [],
"method": &"play_footstep_audio"
}]
}

[sub_resource type="Animation" id="Animation_ufp4j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pnwq2"]
_data = {
"Player_Dead": SubResource("Animation_ftg8m"),
"Player_IdleDown": SubResource("Animation_syiax"),
"Player_IdleLeft": SubResource("Animation_ehbcb"),
"Player_IdleRight": SubResource("Animation_81qhr"),
"Player_IdleUp": SubResource("Animation_86o8p"),
"Player_MoveDown": SubResource("Animation_0bki2"),
"Player_MoveLeft": SubResource("Animation_2334g"),
"Player_MoveRight": SubResource("Animation_s3r6y"),
"Player_MoveUp": SubResource("Animation_7jrqr"),
"RESET": SubResource("Animation_ufp4j")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xhb5r"]
animation = &"Player_Dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u0iy5"]
animation = &"Player_IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wvnc6"]
animation = &"Player_IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hiudy"]
animation = &"Player_IdleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_78my0"]
animation = &"Player_IdleDown"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_2f6ug"]
blend_point_0/node = SubResource("AnimationNodeAnimation_u0iy5")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_wvnc6")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_hiudy")
blend_point_2/pos = Vector2(0, -0.95)
blend_point_3/node = SubResource("AnimationNodeAnimation_78my0")
blend_point_3/pos = Vector2(0, 1)
min_space = Vector2(-1.04, -1.06)
max_space = Vector2(1.05, 1.05)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_73t8x"]
animation = &"Player_MoveLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b0nop"]
animation = &"Player_MoveRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dv00c"]
animation = &"Player_MoveUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y3uky"]
animation = &"Player_MoveDown"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_byhfp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_73t8x")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_b0nop")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_dv00c")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_y3uky")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yybhb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vo00l"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0rxwm"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_isbt3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3icuo"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_28mif"]
states/Dead/node = SubResource("AnimationNodeAnimation_xhb5r")
states/Dead/position = Vector2(481, 205)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_2f6ug")
states/Idle/position = Vector2(376, 100)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_byhfp")
states/Move/position = Vector2(590, 100)
states/Start/position = Vector2(194, 100)
transitions = ["Idle", "Move", SubResource("AnimationNodeStateMachineTransition_yybhb"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_vo00l"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_0rxwm"), "Idle", "Dead", SubResource("AnimationNodeStateMachineTransition_isbt3"), "Move", "Dead", SubResource("AnimationNodeStateMachineTransition_3icuo")]
graph_offset = Vector2(-28, 25)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_it2ji"]
radius = 4.31258
height = 13.9589

[sub_resource type="Animation" id="Animation_apxtv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o5rg2"]
resource_name = "hit_flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_main:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"disable_hurtbox"
}, {
"args": [],
"method": &"enable_hurtbox"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e33v1"]
_data = {
"RESET": SubResource("Animation_apxtv"),
"hit_flash": SubResource("Animation_o5rg2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_uu4o2"]
radius = 16.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 257
script = ExtResource("1_5b6ds")
_movement_data = ExtResource("2_sbvpg")
base_stats = ExtResource("3_dm6u0")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="sprite_shadow" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("3_q1orw")

[node name="sprite_main" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_mhluu")
position = Vector2(0, -8)
texture = ExtResource("4_hvum2")
hframes = 4
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
y_sort_enabled = true
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5rws2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pnwq2")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pnwq2")
}
tree_root = SubResource("AnimationNodeStateMachine_28mif")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Move/blend_position = Vector2(0, 0)

[node name="Inventory" type="Node2D" parent="."]
script = ExtResource("7_doocm")

[node name="Weapons" type="Node2D" parent="Inventory"]
unique_name_in_owner = true
z_index = 1
y_sort_enabled = true

[node name="PassiveItems" type="Node2D" parent="Inventory"]
unique_name_in_owner = true

[node name="PlayerAudio" type="Node2D" parent="."]

[node name="FootstepAudio" type="AudioStreamPlayer2D" parent="PlayerAudio"]
unique_name_in_owner = true
stream = ExtResource("6_n0eae")
volume_db = -12.0

[node name="HitAudio" type="AudioStreamPlayer2D" parent="PlayerAudio"]
stream = ExtResource("8_pplm0")
volume_db = -12.0

[node name="Hurtbox" parent="." instance=ExtResource("6_mmy1x")]
collision_layer = 8
collision_mask = 32
script = ExtResource("8_qg850")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
z_index = 1
position = Vector2(0, -6)
scale = Vector2(1.1594, 1.00294)
shape = SubResource("CapsuleShape2D_it2ji")

[node name="FX_Manager" parent="." instance=ExtResource("8_4nua5")]

[node name="StatsComponent" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("10_37dvf")

[node name="HealthComponent" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("9_2vrhx")

[node name="CanvasLayer" type="CanvasLayer" parent="HealthComponent"]

[node name="HealthBarContainer" type="Control" parent="HealthComponent/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 65.0
offset_bottom = 6.0

[node name="BG" type="ColorRect" parent="HealthComponent/CanvasLayer/HealthBarContainer"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="HealthBar" type="ColorRect" parent="HealthComponent/CanvasLayer/HealthBarContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.956863, 0.262745, 0.211765, 1)

[node name="Label" type="Label" parent="HealthComponent/CanvasLayer/HealthBarContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 9.0
grow_horizontal = 2
text = "0/0"
label_settings = ExtResource("15_t8qhs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelComponent" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("10_2p8m5")

[node name="CanvasLayer" type="CanvasLayer" parent="LevelComponent"]

[node name="ExperienceBarContainer" type="Control" parent="LevelComponent/CanvasLayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -164.0
offset_right = -255.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 0

[node name="BG" type="ColorRect" parent="LevelComponent/CanvasLayer/ExperienceBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="ExperienceBar" type="ColorRect" parent="LevelComponent/CanvasLayer/ExperienceBarContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 8.0
color = Color(0.6432, 0.096, 0.96, 1)

[node name="Label_Level" type="Label" parent="LevelComponent/CanvasLayer/ExperienceBarContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 9.0
grow_horizontal = 2
text = "Lv. 1"
label_settings = ExtResource("15_t8qhs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e33v1")
}

[node name="PickupRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256
script = ExtResource("17_hd6ll")

[node name="Sprite2D" type="Sprite2D" parent="PickupRange"]
visible = false
modulate = Color(1, 1, 1, 0.341176)
texture = ExtResource("17_fya5j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRange"]
shape = SubResource("CircleShape2D_uu4o2")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="take_damage" from="Hurtbox" to="." method="take_damage"]
[connection signal="die" from="HealthComponent" to="." method="_on_health_component_die"]
[connection signal="player_level_up" from="LevelComponent" to="." method="_on_level_component_player_level_up"]
[connection signal="area_entered" from="PickupRange" to="PickupRange" method="_on_area_entered"]

[editable path="Hurtbox"]
